--- a/Website/Basis Website [SBR Viewer]/talentencentrum_zuidwest_nederland.html
+++ b/Website/Basis Website [SBR Viewer]/talentencentrum_zuidwest_nederland.html
@@ -27,7 +27,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
-            <div class="navbar-header page-scroll">
+            <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
@@ -41,22 +41,22 @@
                         <a href="#intro">
                         </a>
                     </li>
-                    <li class="page-scroll">
+                    <li>
                         <a href="rugbyacademie.html">
                             <span>Rugby academie</span>
                         </a>
                     </li>
-                    <li class="page-scroll">
+                    <li>
                         <a href="rtc.html">
                             <span>RTC</span>
                         </a>
                     </li>
-                    <li class="page-scroll">
+                    <li>
                         <a href="maatwerk_en_breedtesport.html">
                             <span>Maatwerk & Breedtesport</span>
                         </a>
                     </li>
-                    <li class="page-scroll">
+                    <li>
                         <a href="talentencentrum_zuidwest_nederland.html">
                             <span>Talentencentrum ZW Nederland</span>
                         </a>
@@ -67,18 +67,36 @@
                         </a>
                     </li> -->
                 </ul>
-                <div class="language visible-xs-block">
-                    <div class="col-md-12">
-                        <div class="btn-toolbar" role="toolbar">
-                            <div class="btn-group">
-                                <button class="menu-lang_nl lang-button"><span class="flag-icon flag-nl-32"></span></button>
-                            </div>
-                            <div class="btn-group">
-                                <button class="menu-lang_en lang-button"><span class="flag-icon flag-gb-32"></span></button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            </div>
+
+            <div class="col-md-2 col-md-offset-10 nav-menu">
+                <ul>
+                    <li class="page-scroll">
+                        <a href="#intro">
+                            <span>intro</span>
+                        </a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#about">
+                            <span>about</span>
+                        </a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#impressie">
+                            <span>impressie</span>
+                        </a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#software">
+                            <span>software</span>
+                        </a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#download">
+                            <span>download</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -92,10 +110,11 @@
                 <div class="divider-grey"></div>
             </div>
             <div class="section-container">
-
+                
             </div>
         </div>
     </section>
+
     <section id="about" class="section about">
         <div class="section-body">
             <div class="section-header">
@@ -110,6 +129,7 @@
             </div>
         </div>
     </section>
+
     <section id="impressie" class="section impressie">
         <div class="section-body">
             <div class="section-header">
@@ -124,6 +144,7 @@
             </div>
         </div>
     </section>
+
     <section id="software" class="section software">
         <div class="section-body">
             <div class="section-header">
@@ -138,6 +159,7 @@
             </div>
         </div>
     </section>
+
     <section id="download" class="section download">
         <div class="section-body">
             <div class="section-header">
@@ -152,6 +174,7 @@
             </div>
         </div>
     </section>
+
     <section id="contact" class="section contact">
         <div class="section-body">
             <div class="section-header">
@@ -164,6 +187,7 @@
             </div>
         </div>
     </section>
+
     <section id="contact-form" class="section contact-form">
         <div class="section-body">
             <div class="section-header">
@@ -175,6 +199,7 @@
             </div>
         </div>
     </section>
+
     <section id="footer">
         <div class="footer-section">
             <p>
