temp commit maatwerk en breedtesport
einde van de dag commit, nog niet af

--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -80,37 +80,80 @@
                     </div>
                 </div>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
-
     <section id="intro" class="section intro">
         <div class="section-body">
             <div class="section-header">
-                <h2>Pagina 0</h2>
+                <h2>Maatwerk en breedtesport</h2>
                 <div class="divider-grey"></div>
             </div>
             <div class="section-container">
-
+                
             </div>
         </div>
     </section>
     <section id="about" class="section about">
         <div class="section-body">
             <div class="section-header">
-                <h2>Pagina 1</h2>
+                <h2>Algemeen</h2>
                 <div class="divider-grey"></div>
             </div>
-            <div class="section-container hcenter">
-                <div class="vert-center">
-                    Verticale centrering
+            <div class="section-container">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <img src="img/SBR_Viewer_128.png" class="profile" alt="SBR Viewer">
+                        </div>
+                        <div class="col-lg-8">
+                            <p>
+                                <span lang="nl"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</span>
+                            </p>
+                            <div class="collapse-group">
+                                <p class="collapse">
+                                    <span> Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.</span>
+                                </p>
+                                <a class="btn btn-default btn-collapse" href="#">
+                                    <span lang="nl">Que?</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
             </div>
         </div>
     </section>
-    <section id="impressie" class="section impressie">
+    <section id="toernooi" class="section toernooi">
+        <div class="section-body">
+            <div class="section-header">
+                <h2>Scholenrugbytoernooi</h2>
+                <div class="divider-grey"></div>
+            </div>
+            <div class="section-container">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <img src="img/SBR_Viewer_128.png" class="profile" alt="SBR Viewer">
+                        </div>
+                        <div class="col-lg-8">
+                            <p>
+                                <span> Rugby is een geschikte sport om op school te geven. Rugby is een combinatie van snelheid, kracht, techniek en tactiek, maar heeft ook respect hoog in het vaandel staan: deelnemers leren over weerbaarheid, veiligheid, samenwerken en leren respect te hebben voor elkaar. Daarnaast helpt sporten in het algemeen bij de motorische, sociale en cognitieve ontwikkeling van kinderen.</span>
+                            </p>
+                            <div class="collapse-group">
+                                <p class="collapse">
+                                    <span> Jaarlijks ondersteunt ZeBra het Regionaal  Scholen Rugby Toernooi dat plaats bij RC.RCC BEKARO op sportpark Vierhoeven in Roosendaal. Dit toernooi is opgezet voor leerlingen van het voortgezet onderwijs in drie groepen: U 14 gemengd (jongens en meisjes), U16 meisjes en U16 jongens. In aanloop naar het toernooi verzorgt ZeBra in samenwerking met RCC Bekaro voor elke school een aantal clinics. Alle teams komen hierdoor goed voorbereid aan de start.</span>
+                                </p>
+                                <a class="btn btn-default btn-collapse" href="#">
+                                    <span>Meer info</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+  <!--  <section id="impressie" class="section impressie">
         <div class="section-body">
             <div class="section-header">
                 <h2>
@@ -174,7 +217,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
     <section id="footer">
         <div class="footer-section">
             <p>
