temp commit rtc

--- a/Website/Basis Website [SBR Viewer]/rtc.html
+++ b/Website/Basis Website [SBR Viewer]/rtc.html
@@ -85,10 +85,10 @@
         <!-- /.container -->
     </nav>
 
-    <section id="intro" class="section intro">
+    <section id="intro" class="section intro intro-rtc">
         <div class="section-body">
             <div class="section-header">
-                <h2>Pagina 0</h2>
+                <h1>RTC</h1>
                 <div class="divider-grey"></div>
             </div>
             <div class="section-container">
@@ -99,78 +99,36 @@
     <section id="about" class="section about">
         <div class="section-body">
             <div class="section-header">
-                <h2>Pagina 1</h2>
+                <h1>Wat is het RTC?</h1>
                 <div class="divider-grey"></div>
             </div>
             <div class="section-container hcenter">
                 <div class="vert-center">
-                    Verticale centrering
+                    De NRB organiseert elk seizoen een aantal RTC-trainingen voor 'getalenteerde' jeugdrugbyspelers in de       leeftijdsgroep U12 - U15.<br> Het doel van het RTC-programma is kinderen met 'rugbytalent' extra        
+                    ondersteuning te bieden in hun rugby-ontwikkeling.<br> Dit naast het herkennen en verder volgen van deze 'talenten'.<br> De RTC- opleiding mondt voor een aantal deelnemers uiteindelijk uit in het doorstromen naar de Rugby Academie's en/of nationale jeugdselecties.
                 </div>
-
             </div>
         </div>
     </section>
     <section id="impressie" class="section impressie">
         <div class="section-body">
             <div class="section-header">
-                <h2>
-                    <span lang="nl">Impressie</span>
-                    <span lang="en">Impression</span>
-                </h2>
+                <h1>Geplande RTC dagen 2015</h1>
                 <div class="divider-grey"></div>
             </div>
             <div class="section-container">
-                
-            </div>
-        </div>
-    </section>
-    <section id="software" class="section software">
-        <div class="section-body">
-            <div class="section-header">
-                <h2>
-                    <span lang="nl">Overige software</span>
-                    <span lang="en">Other software</span>
-                </h2>
-                <div class="divider-grey"></div>
-            </div>
-            <div class="section-container">
-                
-            </div>
-        </div>
-    </section>
-    <section id="download" class="section download">
-        <div class="section-body">
-            <div class="section-header">
-                <h2>
-                    <span lang="nl">Download</span>
-                    <span lang="en">Download</span>
-                </h2>
-                <div class="divider-grey"></div>
-            </div>
-            <div class="section-container">
-
-            </div>
-        </div>
-    </section>
-    <section id="contact" class="section contact">
-        <div class="section-body">
-            <div class="section-header">
-                <h2>
-                </h2>
-                <div class="divider-grey"></div>
-            </div>
-            <div class="section-container">
-
-            </div>
-        </div>
-    </section>
-    <section id="contact-form" class="section contact-form">
-        <div class="section-body">
-            <div class="section-header">
-                <h2></h2>
-                <div class="divider-grey"></div>
-            </div>
-            <div class="section-container">
+                Voor de deelnemers is een platform gerealiseerd om stappen te maken. De trainingen die worden verzorgd sluiten naadloos aan op het bereiken van hogere niveau's. Opleidingsprogramma's houden rekening met de verschillen in leeftijd en ontwikkelfases van rugbyers. Belangrijke motieven daarbij zijn zelfontplooing, plezier beleven en het gevoel hebben zinvol bezig te zijn met en voor anderen en zichzelf. Opleiding-/ en ondersteuningsprogramma's worden door tussenkomst van ZeBra (Technisch Hart) afgestemd met de NRB, betrokken verenigingen en organisaties.
+                <h3>Seizoen 2015 – 2016</h3>
+                    <br>&bull;RTC 1 op zondag ? van 09.00 – 13.00 sportpark Vierhoeven
+                    <br>&bull;RTC 2 op zondag ? van 09.00 – 13.00 sportpark Vierhoeven
+                    <br>&bull;RTC 3 op zondag ? van 09.00 – 13.00 sportpark Vierhoeven
+                    <br>&bull;RTC 4 op zaterdag ? 10.00 – 15.00 NRCA                  
+                <br>24 februari 2016 van 13.00 – 17.00 ZeBra Rugby Talentendag op RSG ’t Rijks in Bergen op Zoom met medewerking van Internationale en nationale toppers!
+                <br>Dzv Talentencentrum Zuidwest Nederland bij Aleco:
+                Rugby skills 1x per week. Voor rugbyers in de leeftijdsgroep U 10 – U15. 
+                Maandagavond van 18.30 – 20.00<br>
+                Strenght-, conditioning-, combat- en winnerstrainingen 3x per week. Alleen op uitnodiging van ZeBra Technisch Hart.
+                <br> Op maandag ( 07.45 – 09.15 of van 16.00 – 20.00), woendag (16.00 – 17.30) en vrijdag (16.00 – 17.30).
 
             </div>
         </div>
