--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -82,7 +82,7 @@
             </div>
         </div>
     </nav>
-    <section id="intro" class="section intro">
+    <section id="intro" class="section intro intro-maatwerk">
         <div class="section-body">
             <div class="section-header">
                 <h2>Maatwerk en breedtesport</h2>
