Toevoeging sidebar maatwerk en rtc

--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -80,6 +80,28 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-2 col-md-offset-10 nav-menu">
+                <ul>
+                    <li class="page-scroll">
+                        <a href="#intro">
+                            <span>intro</span>
+                        </a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#about">
+                            <span>about</span>
+                        </a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#toernooi">
+                            <span>Toernooi</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+
         </div>
     </nav>
     <section id="intro" class="section intro intro-maatwerk">
