--- a/Website/Basis Website [SBR Viewer]/rtc.html
+++ b/Website/Basis Website [SBR Viewer]/rtc.html
@@ -81,6 +81,26 @@
                 </div>
             </div>
             <!-- /.navbar-collapse -->
+            <div class="col-md-2 col-md-offset-10 nav-menu">
+                <ul>
+                    <li class="page-scroll">
+                        <a href="#intro">
+                            <span>intro</span>
+                        </a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#about">
+                            <span>about</span>
+                        </a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#impressie">
+                            <span>Toernooi</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
         </div>
         <!-- /.container -->
     </nav>
