--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -80,28 +80,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="col-md-2 col-md-offset-10 nav-menu">
-                <ul>
-                    <li class="page-scroll">
-                        <a href="#intro">
-                            <span>intro</span>
-                        </a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#about">
-                            <span>about</span>
-                        </a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#toernooi">
-                            <span>Toernooi</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-
-
         </div>
     </nav>
     <section id="intro" class="section intro intro-maatwerk">
@@ -125,19 +103,20 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-2">
-                            <img src="img/SBR_Viewer_128.png" class="profile" alt="SBR Viewer">
+                            <!-- <img src="img/SBR_Viewer_128.png" class="profile" alt="SBR Viewer"> -->
                         </div>
                         <div class="col-lg-8">
                             <p>
-                                <span lang="nl"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</span>
+                                <span> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</span>
                             </p>
                             <div class="collapse-group">
                                 <p class="collapse">
                                     <span> Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.</span>
                                 </p>
                                 <a class="btn btn-default btn-collapse" href="#">
-                                    <span lang="nl">Que?</span>
+                                    <span>Que?</span>
                                 </a>
+                                <p></p>
                             </div>
                         </div>
                     </div>
@@ -244,8 +223,6 @@
         <div class="footer-section">
             <p>
                 <span lang="nl"> &copy; 2014 Accept Development B.V. Alle rechten voorbehouden. Vragen? Stuur ons <a href="mailto:info@sbrviewer.eu">email</a>.</span>
-                <span lang="en"> &copy; 2014 Accept Development B.V. All Rights Reserved. Questions? Feel free to <a href="mailto:info@sbrviewer.eu">drop me an email</a>.</span>
-
             </p>
         </div>
     </section>
