geen idee wat verranderd

--- a/Website/Basis Website [SBR Viewer]/rtc.html
+++ b/Website/Basis Website [SBR Viewer]/rtc.html
@@ -89,13 +89,13 @@
                         </a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">
-                            <span>about</span>
+                        <a href="#About">
+                            <span>Wat is RTC?</span>
                         </a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#impressie">
-                            <span>Toernooi</span>
+                        <a href="#RTCdagen">
+                            <span>RTC dagen 2015</span>
                         </a>
                     </li>
                 </ul>
@@ -116,7 +116,7 @@
             </div>
         </div>
     </section>
-    <section id="about" class="section about">
+    <section id="About" class="section about">
         <div class="section-body">
             <div class="section-header">
                 <h1>Wat is het RTC?</h1>
@@ -130,7 +130,7 @@
             </div>
         </div>
     </section>
-    <section id="impressie" class="section impressie">
+    <section id="RTCdagen" class="section impressie">
         <div class="section-body">
             <div class="section-header">
                 <h1>Geplande RTC dagen 2015</h1>
