--- a/Website/Basis Website [SBR Viewer]/talentencentrum_zuidwest_nederland.html
+++ b/Website/Basis Website [SBR Viewer]/talentencentrum_zuidwest_nederland.html
@@ -11,6 +11,7 @@
 
     <title>Zebra Website</title>
 
+
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Fonts -->
@@ -22,81 +23,87 @@
     <link href="css/navbar.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
     <link href="css/section.css" rel="stylesheet">
+    <script type="text/javascript" src="js/modernizr.custom.js"></script>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand" href="index.html">stg Rugby Zebra</a>
-            </div>
+            <div class="row">
+            
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                        <i class="fa fa-bars"></i>
+                    </button>
+                    <a class="navbar-brand" href="index.html">stg Rugby Zebra</a>
+                </div>
 
-            <!-- Nav bar -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="hidden">
-                        <a href="#intro">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="rugbyacademie.html">
-                            <span>Rugby academie</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="rtc.html">
-                            <span>RTC</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="maatwerk_en_breedtesport.html">
-                            <span>Maatwerk & Breedtesport</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="talentencentrum_zuidwest_nederland.html">
-                            <span>Talentencentrum ZW Nederland</span>
-                        </a>
-                    </li>
-<!--                     <li class="page-scroll">
-                        <a href="#contact">
-                            <span>Contact</span>
-                        </a>
-                    </li> -->
-                </ul>
+                <!-- Nav bar -->
+                <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="page-scroll">
+                            <a href="rugbyacademie.html">
+                                <span>Rugby academie</span>
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="rtc.html">
+                                <span>RTC</span>
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="maatwerk_en_breedtesport.html">
+                                <span>Maatwerk & Breedtesport</span>
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="talentencentrum_zuidwest_nederland.html">
+                                <span>Talentencentrum ZW Nederland</span>
+                            </a>
+                        </li>
+    <!--                     <li class="page-scroll">
+                            <a href="#contact">
+                                <span>Contact</span>
+                            </a>
+                        </li> -->
+                    </ul>
+                </div>
             </div>
-
-            <div class="col-md-2 col-md-offset-10 nav-menu">
-                <ul>
-                    <li class="page-scroll">
-                        <a href="#intro">
-                            <span>intro</span>
-                        </a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#about">
-                            <span>about</span>
-                        </a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#impressie">
-                            <span>impressie</span>
-                        </a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#software">
-                            <span>software</span>
-                        </a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#download">
-                            <span>download</span>
-                        </a>
-                    </li>
-                </ul>
+            <div class="row">
+                <div class="col-md-2 col-md-offset-10 nav-menu">
+                    <ul class="nav navbar-nav">
+                        <li class="page-scroll">
+                            <a href="#intro">
+                                <span>intro</span>
+                            </a>
+                        </li>
+<!--                         <li class="page-scroll">
+                            <a href="#about">
+                                <span>about</span>
+                            </a>
+                        </li> -->
+                        <li class="page-scroll">
+                            <a href="#about">
+                                <span>About</span>
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#impressie">
+                                <span>impressie</span>
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#software">
+                                <span>software</span>
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#download">
+                                <span>download</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -213,6 +220,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+    <script src="js/jquery.cookie.js"></script>
+
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.js"></script>
 
