--- a/Website/Basis Website [SBR Viewer]/talentencentrum_zuidwest_nederland.html
+++ b/Website/Basis Website [SBR Viewer]/talentencentrum_zuidwest_nederland.html
@@ -221,7 +221,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <script src="js/jquery.cookie.js"></script>
+    <script src="js/jquery.cookie.js"></script> <!-- doesn't work on a local chrome version. -->
 
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.js"></script>
