--- a/Website/Basis Website [SBR Viewer]/rtc.html
+++ b/Website/Basis Website [SBR Viewer]/rtc.html
@@ -31,8 +31,12 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a href="img/logo ZeBra.gif">
-                <a class="navbar-brand" href="index.html">stg Rugby Zebra</a>
+                <a class="navbar-brand" href="index.html">
+                <div>
+                    <img src="img/logo%20ZeBra.gif" height="50px" alt="">
+                    stg Rugby Zebra
+                </div>
+                </a>
             </div>
 
             <!-- Nav bar -->
