logo zebra alle pagina's

--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -34,7 +34,12 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                         <i class="fa fa-bars"></i>
                     </button>
-                    <a class="navbar-brand" href="index.html">stg Rugby Zebra</a>
+                    <a class="navbar-brand" href="index.html">
+                    <div>
+                        <img src="img/logo%20ZeBra.gif" height="60px" alt="">
+                        stg Rugby Zebra
+                    </div>
+                    </a>
                 </div>
 
                 <!-- Nav bar -->
