--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="SBR Viewer, een viewer voor het openen van SBR documenten">
     <meta name="author" content="Accept Development B.V.">
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="img/favicon.gif">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144-precomposed.png">
 
     <title>Zebra Website</title>
