menu klopt iedere pagina/ pagina zebra selecties toegevoegd

--- a/Website/Basis Website [SBR Viewer]/index.html
+++ b/Website/Basis Website [SBR Viewer]/index.html
@@ -65,6 +65,11 @@
                                 <span>Talentencentrum ZW Nederland</span>
                             </a>
                         </li>
+                        <li>
+                            <a href="Zebra selecties.html">
+                                <span>Zebra selecties</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -74,27 +79,32 @@
                     <ul class="nav navbar-nav">
                         <li class="page-scroll">
                             <a href="#intro">
-                                <span>intro</span>
+                                <span>Informatie stichting</span>
                             </a>
                         </li>
                         <li class="page-scroll">
                             <a href="#about">
-                                <span>About</span>
+                                <span>Nieuws</span>
                             </a>
                         </li>
                         <li class="page-scroll">
                             <a href="#impressie">
-                                <span>impressie</span>
+                                <span>Programma</span>
                             </a>
                         </li>
                         <li class="page-scroll">
                             <a href="#software">
-                                <span>software</span>
+                                <span>Aangesloten verenigingen</span>
                             </a>
                         </li>
                         <li class="page-scroll">
                             <a href="#download">
-                                <span>download</span>
+                                <span>Partners</span>
+                            </a>
+                        </li>
+                            <li class="page-scroll">
+                            <a href="#download">
+                                <span>Contact</span>
                             </a>
                         </li>
                     </ul>
