--- a/Website/Basis Website [SBR Viewer]/rugbyacademie.html
+++ b/Website/Basis Website [SBR Viewer]/rugbyacademie.html
@@ -65,6 +65,11 @@
                                 <span>Talentencentrum ZW Nederland</span>
                             </a>
                         </li>
+                        <li>
+                            <a href="Zebra selecties.html">
+                                <span>Zebra selecties</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -73,28 +78,13 @@
                 <div class="col-md-2 col-md-offset-10 nav-menu">
                     <ul class="nav navbar-nav">
                         <li class="page-scroll">
-                            <a href="#intro">
-                                <span>intro</span>
-                            </a>
-                        </li>
-                        <li class="page-scroll">
                             <a href="#about">
-                                <span>About</span>
+                                <span>Algemene informatie</span>
                             </a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#impressie">
-                                <span>impressie</span>
-                            </a>
-                        </li>
-                        <li class="page-scroll">
-                            <a href="#software">
-                                <span>software</span>
-                            </a>
-                        </li>
-                        <li class="page-scroll">
-                            <a href="#download">
-                                <span>download</span>
+                            <a href="#RSG">
+                                <span>RSG ’t Rijks</span>
                             </a>
                         </li>
                     </ul>
@@ -109,7 +99,7 @@
     <section id="intro" class="section intro">
         <div class="section-body">
             <div class="section-header">
-                <h2>Pagina 0</h2>
+                <h2></h2>
                 <div class="divider-grey"></div>
             </div>
             <div class="section-container">
@@ -120,12 +110,26 @@
     <section id="about" class="section about">
         <div class="section-body">
             <div class="section-header">
-                <h2>Pagina 1</h2>
+                <h2>Algemene informatie</h2>
                 <div class="divider-grey"></div>
             </div>
             <div class="section-container hcenter">
                 <div class="vert-center">
                     Verticale centrering
+                </div>
+
+            </div>
+        </div>
+    </section>
+     <section id="RSG" class="section RSG">
+        <div class="section-body">
+            <div class="section-header">
+                <h2>RSG ’t Rijks</h2>
+                <div class="divider-grey"></div>
+            </div>
+            <div class="section-container hcenter">
+                <div class="vert-center">
+                    
                 </div>
 
             </div>
