--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -65,6 +65,11 @@
                                 <span>Talentencentrum ZW Nederland</span>
                             </a>
                         </li>
+                        <li>
+                            <a href="Zebra selecties.html">
+                                <span>Zebra selecties</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -73,28 +78,13 @@
                 <div class="col-md-2 col-md-offset-10 nav-menu">
                     <ul class="nav navbar-nav">
                         <li class="page-scroll">
-                            <a href="#intro">
-                                <span>intro</span>
-                            </a>
-                        </li>
-                        <li class="page-scroll">
                             <a href="#about">
-                                <span>About</span>
+                                <span>Algemeen</span>
                             </a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#impressie">
-                                <span>impressie</span>
-                            </a>
-                        </li>
-                        <li class="page-scroll">
-                            <a href="#software">
-                                <span>software</span>
-                            </a>
-                        </li>
-                        <li class="page-scroll">
-                            <a href="#download">
-                                <span>download</span>
+                            <a href="#toernooi">
+                                <span>Scholenrugbytoernooi</span>
                             </a>
                         </li>
                     </ul>
