--- a/Website/Basis Website [SBR Viewer]/rtc.html
+++ b/Website/Basis Website [SBR Viewer]/rtc.html
@@ -65,6 +65,11 @@
                                 <span>Talentencentrum ZW Nederland</span>
                             </a>
                         </li>
+                        <li>
+                            <a href="Zebra selecties.html">
+                                <span>Zebra selecties</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
