Paginaverwijzingen Maatwerk bijgewerkt

--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -78,19 +78,23 @@
                 <div class="col-md-2 col-md-offset-10 nav-menu">
                     <ul class="nav navbar-nav">
                         <li class="page-scroll">
+                            <a href="#intro">
+                                <span>Intro</span>
+                            </a>
+                        </li>
+                        <li class="page-scroll">
                             <a href="#about">
                                 <span>Algemeen</span>
                             </a>
                         </li>
                         <li class="page-scroll">
                             <a href="#toernooi">
-                                <span>Scholenrugbytoernooi</span>
+                                <span>toernooi</span>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
-
         </div>
     </nav>
     <section id="intro" class="section intro intro-maatwerk">
