kleine bug fixes

--- a/Website/Basis Website [SBR Viewer]/Zebra selecties.html
+++ b/Website/Basis Website [SBR Viewer]/Zebra selecties.html
@@ -253,7 +253,7 @@
             </div>
         </div>
     </section>
-    <section id="HU15" class="section contact">
+    <section id="HU15" class="section download">
         <div class="section-body">
             <div class="section-header">
                 <h2>Zebra Heren U15</h2>
