--- a/Website/Basis Website [SBR Viewer]/index.html
+++ b/Website/Basis Website [SBR Viewer]/index.html
@@ -79,7 +79,9 @@
                     <ul class="nav navbar-nav">
                         <li class="page-scroll">
                             <a href="#intro">
-                                <span>Informatie stichting</span>
+                                <dit class="span">
+                                 <span>Informatie stichting</span>
+                                </dit>
                             </a>
                         </li>
                         <li class="page-scroll">
