--- a/Website/Basis Website [SBR Viewer]/rtc.html
+++ b/Website/Basis Website [SBR Viewer]/rtc.html
@@ -111,7 +111,7 @@
     <section id="About" class="section about">
         <div class="section-body">
             <div class="section-header">
-                <h1>Wat is het RTC?</h1>
+                <h1>Wat is RTC?</h1>
                 <div class="divider-grey"></div>
             </div>
             <div class="section-container hcenter">
