--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -100,7 +100,7 @@
     <section id="intro" class="section intro intro-maatwerk">
         <div class="section-body">
             <div class="section-header">
-                <h2>Maatwerk en breedtesport</h2>
+                <h2><BR><BR>Maatwerk en breedtesport</h2>
                 <div class="divider-grey"></div>
             </div>
             <div class="section-container">
