--- a/Website/Basis Website [SBR Viewer]/rtc.html
+++ b/Website/Basis Website [SBR Viewer]/rtc.html
@@ -114,13 +114,22 @@
                 <h1>Wat is RTC?</h1>
                 <div class="divider-grey"></div>
             </div>
-            <div class="section-container hcenter">
-                <div class="vert-center">
-                    De NRB organiseert elk seizoen een aantal RTC-trainingen voor 'getalenteerde' jeugdrugbyspelers in de       leeftijdsgroep U12 - U15.<br> Het doel van het RTC-programma is kinderen met 'rugbytalent' extra        
-                    ondersteuning te bieden in hun rugby-ontwikkeling.<br> Dit naast het herkennen en verder volgen van deze 'talenten'.<br> De RTC- opleiding mondt voor een aantal deelnemers uiteindelijk uit in het doorstromen naar de Rugby Academie's en/of nationale jeugdselecties.
-                </div>
-            </div>
+            <div class="col-lg-8">
+                            <p>
+                                <span> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</span>
+                            </p>
+                            <div class="collapse-group">
+                                <p class="collapse">
+                                    <span> Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.</span>
+                                </p>
+                                <a class="btn btn-default btn-collapse" href="#">
+                                    <span>Que?</span>
+                                </a>
+                                <p></p>
+                            </div>
+                        </div>
         </div>
+
     </section>
     <section id="RTCdagen" class="section impressie">
         <div class="section-body">
