--- a/Website/Basis Website [SBR Viewer]/selecties.html
+++ b/Website/Basis Website [SBR Viewer]/selecties.html
@@ -27,8 +27,8 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
     <header>
-        <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-            <div class="container">
+        <div class="container">
+            <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
                 <div class="row">
                     
                     <div class="navbar-header">
@@ -92,25 +92,22 @@
                                     Heren_U15
                                 </a>
                             </li>
-                                <li class="page-scroll">
+                            <li class="page-scroll">
                                 <a href="#HU16">
                                     Heren_U16
                                 </a>
                             </li>
-                             </li>
-                                <li class="page-scroll">
+                            <li class="page-scroll">
                                 <a href="#HU17">
                                     Heren_U17
                                 </a>
                             </li>
-                             </li>
-                                <li class="page-scroll">
+                            <li class="page-scroll">
                                 <a href="#DU15">
                                     Dames_U15
                                 </a>
                             </li>
-                             </li>
-                                <li class="page-scroll">
+                            <li class="page-scroll">
                                 <a href="#DU18">
                                     Dames_U18
                                 </a>
@@ -149,33 +146,33 @@
                 <div class="divider-grey"></div>
                 <div class="table">
                     <table align="center">
-                    <TR>
-                        <TD WIDTH="250" HEIGHT="15">Naam</TD>
-                        <TD WIDTH="25">Vereniging</TD>
-                        <TD WIDTH="25">Selectie</TD>
-                        </TR>
-                        <TR>
-                        <TD HEIGHT="40">Danen Dirk</TD>
-                        <TD>RHC</TD>
-                        <TD>NL A</TD>
-                        </TR>
-                        <TR>
-                        <TD HEIGHT="40">Rik Roovers</TD>
-                        <TD>RHC</TD>
-                        <TD>NL A</TD>
-                        </TR>
-                        <TD HEIGHT="40">Yirmibes Yavuz</TD>
-                        <TD>RHC</TD>
-                        <TD>NL A</TD>
-                        </TR>
-                        <TD HEIGHT="40">Bastiaansen Jens</TD>
-                        <TD>REL</TD>
-                        <TD>NL U18</TD>
-                        </TR>
-                        <TD HEIGHT="40">Nielen van No&euml;l</TD>
-                        <TD>Rel</TD>
-                        <TD>NL U17</TD>
-                    </TR>
+                    <tr>
+                        <td width="250" height="15">Naam</td>
+                        <td WIDTH="25">Vereniging</td>
+                        <td WIDTH="25">Selectie</td>
+                        </tr>
+                        <tr>
+                        <td height="40">Danen Dirk</td>
+                        <td>RHC</td>
+                        <td>NL A</td>
+                        </tr>
+                        <tr>
+                        <td height="40">Rik Roovers</td>
+                        <td>RHC</td>
+                        <td>NL A</td>
+                        </tr>
+                        <td height="40">Yirmibes Yavuz</td>
+                        <td>RHC</td>
+                        <td>NL A</td>
+                        </tr>
+                        <td height="40">Bastiaansen Jens</td>
+                        <td>REL</td>
+                        <td>NL U18</td>
+                        </tr>
+                        <td height="40">Nielen van No&euml;l</td>
+                        <td>Rel</td>
+                        <td>NL U17</td>
+                    </tr>
                     </table>
                 </div>
             </div>
